--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "cd server && npm run dev"
+    "server": "cd Backend && npm run dev"
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.2.0",
